@@ -378,6 +378,14 @@ dependencies {
   contractTestCompile sourceSets.test.runtimeClasspath
 
   integrationTestImplementation(sourceSets.test.output)
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.2:all'
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
